--- a/problem-spring-common/pom.xml
+++ b/problem-spring-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.zalando</groupId>
         <artifactId>problem-spring-parent</artifactId>
-        <version>0.26.0-SNAPSHOT</version>
+        <version>0.26.0</version>
     </parent>
     <artifactId>problem-spring-common</artifactId>
     <dependencies>
