--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <spring-security.version>5.4.2</spring-security.version>
         <spring-boot.version>2.4.0</spring-boot.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <javax-el.version>3.0.0</javax-el.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -255,11 +256,18 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-el</artifactId>
-            <version>10.0.0</version>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax-el.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>${javax-el.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>java-hamcrest</artifactId>
