--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 
         <slf4j.version>1.7.30</slf4j.version>
         <jackson.version>2.12.0</jackson.version>
-        <problem.version>0.25.0</problem.version>
+        <problem.version>0.26.0-RC.0</problem.version>
         <spring.version>5.3.2</spring.version>
         <spring-security.version>5.4.2</spring-security.version>
         <spring-boot.version>2.4.1</spring-boot.version>
