--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
         <dependency>
             <groupId>com.atlassian.oai</groupId>
             <artifactId>swagger-request-validator-springmvc</artifactId>
-            <version>2.15.1</version>
+            <version>2.18.0</version>
             <optional>true</optional>
             <exclusions>
                 <exclusion>
@@ -169,6 +169,13 @@
                     <artifactId>jaxb-api</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- CVE-2021-29425 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <!-- CVE-2020-13956 -->
@@ -199,7 +206,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1-jre</version>
+            <version>30.1.1-jre</version>
             <optional>true</optional>
         </dependency>
 
@@ -316,7 +323,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>6.1.5</version>
+                <version>6.1.6</version>
                 <executions>
                     <execution>
                         <goals>
