--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.zalando</groupId>
     <artifactId>problem-spring-parent</artifactId>
-    <version>0.29.1</version>
+    <version>0.29.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <url>https://github.com/zalando/problem-spring-web</url>
     <organization>
