--- a/problem-spring-web-autoconfigure/pom.xml
+++ b/problem-spring-web-autoconfigure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.zalando</groupId>
         <artifactId>problem-spring-parent</artifactId>
-        <version>0.29.1</version>
+        <version>0.29.2-SNAPSHOT</version>
     </parent>
     <artifactId>problem-spring-web-autoconfigure</artifactId>
     <dependencies>
