--- a/problem-violations/pom.xml
+++ b/problem-violations/pom.xml
@@ -62,7 +62,9 @@
     <build>
         <plugins>
             <plugin>
+		<groupId>org.apache.maven.plugin</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+		<version>3.5.0</version>
                 <configuration>
                     <additionalDependencies>
                         <additionalDependency>
