--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,16 +22,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
-    - name: Cache
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: m2
+      uses: actions/checkout@v4
     - name: Set up JDK
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
+        distribution: temurin
         java-version: 17
+        cache: 'maven'
     - name: Compile
       run: ./mvnw clean test-compile -B
     - name: Test
