--- a/problem-violations/pom.xml
+++ b/problem-violations/pom.xml
@@ -62,9 +62,9 @@
     <build>
         <plugins>
             <plugin>
-		<groupId>org.apache.maven.plugin</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-		<version>3.5.0</version>
+                <version>3.5.0</version>
                 <configuration>
                     <additionalDependencies>
                         <additionalDependency>
